test/files_test/errors/lambda_missing_body.scm
; Test: Lambda with missing body - should return exit code 84
(lambda (a b))
